# vortice

./: README.md  pyproject.toml
samples/: CS_130.metadata  sample.ipynb  tests.ipynb
src/vortice/: config.py  config_data_fields.py  config_def.py  config_global.py  config_instruments.py
src/vortice/definitions/: variables.json
src/vortice/physics/: radiation.py  tilt_correction.py  wind_correction.py
tests/: __init__.py
