[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vortice"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  { name = "Josué M. Sehnem", email = "josue@sehnem.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "polars>=0.12.0",
  "pendulum>=2.1.0",
]

[project.urls]
Documentation = "https://github.com/sehnem/vortice#readme"
Issues = "https://github.com/sehnem/vortice/issues"
Source = "https://github.com/sehnem/vortice"

[tool.hatch.version]
path = "src/vortice/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vortice tests}"

[tool.coverage.run]
source_pkgs = ["vortice", "tests"]
branch = true
parallel = true
omit = [
  "src/vortice/__about__.py",
]

[tool.coverage.paths]
vortice = ["src/vortice", "*/vortice/src/vortice"]
tests = ["tests", "*/vortice/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
